--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          
         <tr>
          <td>شایان</td>
-         <td>ملاکی</td>
+         <td>رضازاده</td>
         </tr>
          
         <tr>
